Closed
Bug 1577734
Opened 6 years ago
Closed 6 years ago
Crash in [@ mozilla::dom::HTMLMediaElement::MediaStreamRenderer::UpdateGraphTime]
Categories
(Core :: Audio/Video: MediaStreamGraph, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla70
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | fixed |
People
(Reporter: calixte, Assigned: pehrsons)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-30db63b6-96d4-46ce-a610-da3870190830.
Top 10 frames of crashing thread:
0 xul.dll void mozilla::dom::HTMLMediaElement::MediaStreamRenderer::UpdateGraphTime dom/html/HTMLMediaElement.cpp:443
1 xul.dll nsresult mozilla::detail::RunnableFunction<`lambda at z:/task_1567112520/build/src/obj-firefox/dist/include/mozilla/StateWatching.h:248:34'>::Run xpcom/threads/nsThreadUtils.h:564
2 xul.dll void mozilla::AutoTaskDispatcher::DrainDirectTasks xpcom/threads/TaskDispatcher.h:99
3 xul.dll void mozilla::EventTargetWrapper::FireTailDispatcher xpcom/threads/AbstractThread.cpp:71
4 xul.dll nsresult mozilla::detail::RunnableMethodImpl< xpcom/threads/nsThreadUtils.h:1176
5 xul.dll mozilla::CycleCollectedJSContext::ProcessStableStateQueue xpcom/base/CycleCollectedJSContext.cpp:435
6 xul.dll mozilla::CycleCollectedJSContext::AfterProcessTask xpcom/base/CycleCollectedJSContext.cpp:494
7 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1283
8 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
9 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:88
There are 16 crashes (from 5 installations) in nightly 70 with buildid 20190829214656. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1573102.
[1] https://hg.mozilla.org/mozilla-central/rev?node=f61dd73cac3a
Flags: needinfo?(apehrson)
| Assignee | ||
Comment 1•6 years ago
|
||
So we were wrong here, because Unwatch unwatches, but any notifications that were already scheduled will still run (async!).
Flags: needinfo?(apehrson)
| Assignee | ||
Comment 2•6 years ago
|
||
I think I will remove the unsetting of mGraphTimeOffset, so we match pre-bug1573102 behavior.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → apehrson
Status: NEW → ASSIGNED
| Assignee | ||
Updated•6 years ago
|
Priority: -- → P2
Pushed by pehrsons@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/111049359225
Don't unset mGraphTimeOffset in MediaStreamRenderer. r=padenot
Comment 5•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Comment 6•6 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•