Bug 1577734 - Don't unset mGraphTimeOffset in MediaStreamRenderer. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D44158

--HG--
extra : moz-landing-system : lando